# arguslib

./: .gitignore  README.md  pyproject.toml
arguslib/: __init__.py  config.py  protocols.py
arguslib/aircraft/: __init__.py  aircraft_interface.py  aircraft_track.py  camera_aircraft_interface.py  fleet.py
arguslib/camera/: __init__.py  calibration.py  camera.py  camera_array.py  direct_camera.py  loaders.py  locator.py  sources.py  undistorted_camera.py  video.py  video_interface.py
arguslib/defaults/: adsb_path.txt  calibration_3-7.yml  camera_arrays.yml  cameras.yml  cobalt_3-7_calibration.yml  cobalt_5-1_calibration.yml  cobalt_5-3_calibration.yml  cobalt_5-4_calibration.yml  maps.yml  radars.yml
arguslib/instruments/: __init__.py  calibration.py  cam1_calibration.yml  camera.py  camera_array.py  direct_camera.py  instruments.py  radar.py  statuslib.py  undistorted_camera.py  video_interface.py
arguslib/mapping/: __init__.py  map.py
arguslib/misc/: geo.py  hipparcos_15apparentMagnitude.csv  interpolation.py  met.py  (+3 more)
calibration_tool/: app.py
docs/: conf.py  configuration.rst  index.rst  sg_execution_times.rst  user_guide.rst
examples/: aircraft_camera_interface_test.py  aircraft_test.py  fleet_version_example.py  interfaces.py  intersect_time.py  map.py  multicam_direct.py  perspective_camera.py  quick_quicklooks.py  radar_scan_progression_video.py  raw_video_data.py  streamlit_radar_visualiser.py  video_example.py  video_out.py  visualising_instruments.py  wescon_array.py  wind_test.py
jobs/: generate_camera_radar_quicklooks.py
radar_quicklooks/: radar_quicklook.py
(+25 files in other folders)
