[project]
name = 'arguslib'
description = 'Support library for using cameras in the argus network'
version = '0.1a'
requires-python = ">= 3.8"
dependencies = [
'numpy'
]
authors = [
{name = 'Edward Gryspeerdt', email='e.gryspeerdt@imperial.ac.uk'},
]

[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"
